Add muted attribute to video element

--- a/index.html
+++ b/index.html
@@ -275,6 +275,8 @@ const OpeningVideo = () => {
         <video
           className="w-full h-full object-contain"
           autoPlay
+          muted
+          playsInline
           onEnded={handleVideoEnd}
           src={MEDIA.videos.openingVideo}
         >
