--- a/index.html
+++ b/index.html
@@ -1370,7 +1370,7 @@ const OpeningVideo = () => {
 <div style="margin-top: 50px; padding: 40px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-radius: 20px;">
   
   <h2 style="color: white; text-align: center; font-size: 32px; margin-bottom: 35px;">
-    ✨ 加入我們的大家庭 ✨<br>
+    ✨ 加入我們的大家庭 ✨<br />
     <span style="font-size: 24px; opacity: 0.95;">Join Our Community</span>
   </h2>
   
@@ -1395,7 +1395,7 @@ const OpeningVideo = () => {
   </div>
   
   <p style="margin-top: 40px; text-align: center; font-size: 20px; color: white; line-height: 1.8;">
-    📱 掃描 QR Code 關注我們！<br>
+    📱 掃描 QR Code 關注我們！<br />
     <span style="font-size: 18px;">Scan to follow us and learn about volunteer opportunities!</span>
   </p>
 </div>
