Fix self-closing tags in index.html

--- a/index.html
+++ b/index.html
@@ -1378,14 +1378,14 @@ const OpeningVideo = () => {
     
     <div style="text-align: center; background: white; padding: 25px; border-radius: 15px; box-shadow: 0 8px 20px rgba(0,0,0,0.25);">
       <img src="images/TCSF FB.jpeg" alt="Tzu Chi SF Facebook" 
-           style="width: 200px; height: 200px; border-radius: 10px; border: 3px solid #1877f2;">
+           style="width: 200px; height: 200px; border-radius: 10px; border: 3px solid #1877f2;" />
       <p style="margin-top: 20px; font-weight: bold; color: #1877f2; font-size: 20px;">📘 Facebook</p>
       <p style="font-size: 15px; color: #666;">慈濟舊金山分會</p>
     </div>
     
     <div style="text-align: center; background: white; padding: 25px; border-radius: 15px; box-shadow: 0 8px 20px rgba(0,0,0,0.25);">
       <img src="images/TCSF IG.jpg" alt="Tzu Chi SF Instagram" 
-           style="width: 200px; height: 200px; border-radius: 10px; border: 3px solid #E4405F;">
+           style="width: 200px; height: 200px; border-radius: 10px; border: 3px solid #E4405F;" />
       <p style="margin-top: 20px; font-weight: bold; color: #E4405F; font-size: 20px;">📸 Instagram</p>
       <p style="font-size: 15px; color: #666;">@tzuchiusa.sf</p>
     </div>
