Fix comment syntax in index.html

--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,7 @@ const OpeningVideo = () => {
 </div>
 
 <script>
-{/* 自動播放歡迎音樂 */}
+// 自動播放歡迎音樂 
 window.addEventListener('load', function() {
   playMusic('welcome');
 });
