--- a/index.html
+++ b/index.html
@@ -1,272 +1,115 @@
-```html
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Journey of Kindness</title>
+    <title>慈善之旅 Journey of Kindness</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto; padding: 20px; }
-        h1 { text-align: center; }
-        #input { width: 100%; padding: 10px; margin-bottom: 10px; }
-        button { padding: 10px 20px; background: #4CAF50; color: white; border: none; cursor: pointer; }
-        button:hover { background: #45a049; }
-        #output, #progress { margin-top: 20px; padding: 15px; background: #f9f9f9; border: 1px solid #ddd; white-space: pre-wrap; }
+        @keyframes float {
+            0%, 100% { transform: translateY(0px); }
+            50% { transform: translateY(-20px); }
+        }
+        .float-animation { animation: float 3s ease-in-out infinite; }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.9); }
+            to { opacity: 1; transform: scale(1); }
+        }
+        .fade-in { animation: fadeIn 0.5s ease-out; }
+        .emoji-character {
+            font-size: 4rem;
+            display: inline-block;
+            transition: transform 0.3s ease;
+        }
+        .emoji-character:hover {
+            transform: scale(1.2) rotate(10deg);
+        }
+        video {
+            width: 100%;
+            max-width: 800px;
+            border-radius: 20px;
+            box-shadow: 0 20px 50px rgba(0,0,0,0.3);
+        }
     </style>
 </head>
-<body>
-    <h1>Welcome to Journey of Kindness</h1>
-    <p>Enter your input here: <input type="text" id="input"></p>
-    <button id="submitButton" onclick="handleInput()">Submit</button>
-    <div id="output"></div>
-    <div id="progress"></div>
+<body class="bg-gradient-to-br from-blue-50 to-purple-100 min-h-screen">
+    <div id="app"></div>
+    <script type="module">
+        import React, { useState } from 'https://esm.sh/react@18.2.0';
+        import { createRoot } from 'https://esm.sh/react-dom@18.2.0/client';
 
-    <script>
-        // Knowledge base for aphorisms (expanded for better gameplay)
-        const knowledgeBase = {
-            stressed: "Deep breath release stress. Calm your mind, and clarity will follow.",
-            grateful: "Gratitude opens the door to abundance. Cherish what you have.",
-            sad: "Let go of one thought, and all becomes free.",
-            happy: "Joy is the simplest form of gratitude.",
-            anxious: "Inhale clarity, exhale noise.",
-            default: "Witness the moment without judgment. Carry this peace forward."
-        };
+        const TOTAL_LEVELS = 8;
+        
+        function JourneyOfKindness() {
+            const [gameStage, setGameStage] = useState('opening');
+            const [currentLevel, setCurrentLevel] = useState(null);
+            const [completedLevels, setCompletedLevels] = useState([]);
+            const [showVideo, setShowVideo] = useState(true);
 
-        // Game state object
-        let gameState = {
-            currentStage: "Inner Exploration",
-            reflections: [],
-            averageScore: 0
-        };
+            const OpeningVideo = () => (
+                React.createElement('div', { className: 'min-h-screen flex flex-col items-center justify-center p-8 bg-gradient-to-br from-purple-900 to-blue-900' },
+                    React.createElement('div', { className: 'text-center mb-8 fade-in' },
+                        React.createElement('h1', { className: 'text-6xl font-bold text-white mb-4' }, '慈善之旅'),
+                        React.createElement('h2', { className: 'text-4xl font-bold text-blue-200' }, 'Journey of Kindness')
+                    ),
+                    showVideo ? 
+                        React.createElement('div', { className: 'fade-in' },
+                            React.createElement('video', {
+                                autoPlay: true,
+                                onEnded: () => setShowVideo(false),
+                                className: 'mb-8'
+                            },
+                                React.createElement('source', { src: 'images/JourneyOfKindness_GameStartScene.mp4', type: 'video/mp4' }),
+                                '您的瀏覽器不支援影片播放'
+                            ),
+                            React.createElement('button', {
+                                onClick: () => setShowVideo(false),
+                                className: 'bg-white/20 hover:bg-white/40 text-white px-8 py-3 rounded-full text-lg transition-all'
+                            }, '略過 Skip →')
+                        )
+                    :
+                        React.createElement('div', { className: 'text-center fade-in' },
+                            React.createElement('div', { className: 'bg-white/10 backdrop-blur-lg p-12 rounded-3xl max-w-2xl mb-8' },
+                                React.createElement('p', { className: 'text-2xl text-white mb-6 leading-relaxed' },
+                                    '25年前，一個小女孩吃生米的畫面改變了一切...',
+                                    React.createElement('br'),
+                                    React.createElement('span', { className: 'text-blue-200' }, '25 years ago, one moment changed everything...')
+                                ),
+                                React.createElement('p', { className: 'text-xl text-blue-200 mb-8' },
+                                    '現在，輪到你用AI的力量延續這份愛',
+                                    React.createElement('br'),
+                                    'Now, it is your turn to continue this love with AI'
+                                ),
+                                React.createElement('div', { className: 'text-4xl mb-6' }, '🍚 → 🤖 → 💙')
+                            ),
+                            React.createElement('button', {
+                                onClick: () => setGameStage('playing'),
+                                className: 'bg-gradient-to-r from-pink-500 to-purple-500 hover:from-pink-600 hover:to-purple-600 text-white px-16 py-6 rounded-full text-2xl font-bold shadow-2xl transform hover:scale-105 transition-all'
+                            }, '開始旅程 Start Journey 🚀')
+                        )
+                )
+            );
 
-        // Current mode to manage input states (e.g., menu, emotion, prob, etc.)
-        let currentMode = 'menu'; // Starts with menu
-        let tempData = {}; // Temporary storage for multi-step inputs (e.g., emotion before prob)
+            const MainMenu = () => (
+                React.createElement('div', { className: 'min-h-screen flex items-center justify-center p-8' },
+                    React.createElement('div', { className: 'text-center' },
+                        React.createElement('h1', { className: 'text-6xl font-bold mb-8' }, '遊戲開發中...'),
+                        React.createElement('p', { className: 'text-2xl text-gray-600 mb-8' }, 'Game levels coming soon!'),
+                        React.createElement('button', {
+                            onClick: () => setGameStage('opening'),
+                            className: 'bg-blue-500 hover:bg-blue-600 text-white px-8 py-4 rounded-full text-xl'
+                        }, '← 返回開場')
+                    )
+                )
+            );
 
-        // Menu text constant
-        const menuText = "Journey Menu:\n1. Show All Progress\n2. Advance/Reflect\n3. Search Aphorisms\n4. Filter by Probability\n5. Save and Exit\nEnter your option:";
-
-        // Load progress from localStorage
-        function loadProgress() {
-            const savedState = localStorage.getItem('journeyState');
-            if (savedState) {
-                try {
-                    gameState = JSON.parse(savedState);
-                    displayMessage("Welcome back! Resumed at Stage: " + gameState.currentStage + "\n\n" + menuText);
-                    showProgress();
-                } catch (error) {
-                    displayMessage("Invalid saved data. Resetting progress.\n\n" + menuText);
-                    initializeGame();
-                }
-            } else {
-                initializeGame();
-            }
+            return React.createElement('div', null,
+                gameStage === 'opening' ? React.createElement(OpeningVideo) : React.createElement(MainMenu)
+            );
         }
 
-        // Initialize or reset game state
-        function initializeGame() {
-            gameState = { currentStage: "Inner Exploration", reflections: [], averageScore: 0 };
-            saveProgress();
-            displayMessage("New journey started.\n\n" + menuText);
-            showProgress();
-        }
-
-        // Save progress to localStorage
-        function saveProgress() {
-            localStorage.setItem('journeyState', JSON.stringify(gameState));
-        }
-
-        // Display message in output div
-        function displayMessage(msg) {
-            document.getElementById('output').innerText = msg;
-        }
-
-        // Get progress text
-        function getProgressText() {
-            let progressText = "Progress (Average Score: " + gameState.averageScore.toFixed(2) + "):\n";
-            gameState.reflections.forEach(ref => {
-                progressText += `PROB(${ref.prob.toFixed(2)}) DESC(${ref.desc})\n`;
-            });
-            return progressText || "No progress yet.";
-        }
-
-        // Show all progress in progress div
-        function showProgress() {
-            document.getElementById('progress').innerText = getProgressText();
-        }
-
-        // Handle main input submission
-        function handleInput() {
-            if (currentMode === 'ended') {
-                displayMessage("Game ended. Please refresh to restart.");
-                return;
-            }
-
-            let userInput = document.getElementById('input').value.trim().toLowerCase();
-            document.getElementById('input').value = ''; // Clear input after submission
-
-            if (!userInput) {
-                displayMessage("Input cannot be empty. Try again.\n\n" + menuText);
-                currentMode = 'menu';
-                return;
-            }
-
-            switch (currentMode) {
-                case 'menu':
-                    handleMenuChoice(userInput);
-                    break;
-                case 'emotion':
-                    handleEmotionInput(userInput);
-                    break;
-                case 'prob':
-                    handleProbInput(userInput);
-                    break;
-                case 'search':
-                    handleSearchInput(userInput);
-                    break;
-                case 'threshold':
-                    handleThresholdInput(userInput);
-                    break;
-            }
-        }
-
-        // Handle menu choices
-        function handleMenuChoice(choice) {
-            if (choice === '1') {
-                showProgress();
-                displayMessage(getProgressText() + "\n\n" + menuText);
-                currentMode = 'menu';
-            } else if (choice === '2') {
-                currentMode = 'emotion';
-                displayMessage("Describe your feelings:");
-            } else if (choice === '3') {
-                currentMode = 'search';
-                displayMessage("Enter search string for aphorisms:");
-            } else if (choice === '4') {
-                currentMode = 'threshold';
-                displayMessage("Enter probability/score threshold (0-1):");
-            } else if (choice === '5') {
-                saveProgress();
-                displayMessage("Progress saved. Goodbye! Refresh to restart.");
-                currentMode = 'ended';
-                document.getElementById('input').disabled = true;
-                document.getElementById('submitButton').disabled = true;
-            } else {
-                displayMessage("Invalid option. Try again.\n\n" + menuText);
-                currentMode = 'menu';
-            }
-        }
-
-        // Handle emotion input for reflect
-        function handleEmotionInput(input) {
-            tempData.emotion = input;
-            let aphorismKey = Object.keys(knowledgeBase).find(key => input.includes(key)) || 'default';
-            tempData.aphorism = knowledgeBase[aphorismKey];
-            currentMode = 'prob';
-            displayMessage(`Jing Si Aphorism: ${tempData.aphorism}\nNow enter probability/score (0-1):`);
-        }
-
-        // Handle probability input with validation (no loop, but allow retries via input)
-        function handleProbInput(input) {
-            let prob = parseFloat(input);
-            if (isNaN(prob) || prob <= 0 || prob > 1) {
-                displayMessage("Invalid score. Must be between 0 and 1. Try again.\nNow enter probability/score (0-1):");
-                return; // Stay in prob mode for retry
-            }
-
-            gameState.reflections.push({ prob: prob, desc: tempData.emotion });
-            gameState.averageScore = gameState.reflections.reduce((sum, ref) => sum + ref.prob, 0) / gameState.reflections.length || 0;
-
-            // Advance stage if reflections reach certain milestones (optimization: add progression logic)
-            if (gameState.reflections.length % 3 === 0) {
-                gameState.currentStage = "Deeper Clarity"; // Example progression
-            }
-
-            let addedMsg = `Reflection added: PROB(${prob.toFixed(2)}) DESC(${tempData.emotion})\nAverage Score: ${gameState.averageScore.toFixed(2)}`;
-            displayMessage(addedMsg + "\n\n" + menuText);
-            saveProgress();
-            showProgress();
-            tempData = {}; // Clear temp
-            currentMode = 'menu'; // Back to menu
-        }
-
-        // Search aphorisms by substring
-        function handleSearchInput(searchStr) {
-            let results = Object.entries(knowledgeBase).filter(([key, value]) => value.toLowerCase().includes(searchStr));
-            let msg = results.length ? results.map(([_, val]) => val).join("\n") : "No matches.";
-            displayMessage("Search Results:\n" + msg + "\n\n" + menuText);
-            currentMode = 'menu';
-        }
-
-        // Filter reflections by probability threshold
-        function handleThresholdInput(input) {
-            let threshold = parseFloat(input);
-            if (isNaN(threshold) || threshold <= 0 || threshold > 1) {
-                displayMessage("Invalid threshold. Try again.\nEnter probability/score threshold (0-1):");
-                return; // Stay in threshold mode
-            }
-            let filtered = gameState.reflections.filter(ref => ref.prob >= threshold);
-            let msg = filtered.length ? filtered.map(ref => `PROB(${ref.prob.toFixed(2)}) DESC(${ref.desc})`).join("\n") : "No matches.";
-            displayMessage("Filtered Results:\n" + msg + "\n\n" + menuText);
-            currentMode = 'menu';
-        }
-
-        // Load progress and start on page load
-        window.onload = loadProgress;
+        const root = createRoot(document.getElementById('app'));
+        root.render(React.createElement(JourneyOfKindness));
     </script>
-   <body>
-    <h1>Welcome to Journey of Kindness</h1>
-    <p>Describe your feelings:</p>
-    <input type="text" id="input">
-    <button onclick="reflect()">Reflect</button>
-    <div id="output"></div>
-    <div id="progress"></div>
-
-    <<div id="stage2" style="display: none;">
-    <h2>Stage 2: Spiritual Tea Riddle</h2>
-    <p>Solve the tower puzzle to stack virtues.</p>
-    <input type="text" id="stage2-input" placeholder="Enter number of disks (3-5)">
-    <button onclick="hanoiPuzzle()">Solve Tower</button>
-    <div id="stage2-output"></div>
-</div>!
-    if (userInput === '2') {
-    document.getElementById('stage1').style.display = 'none';  // Hide Stage 1 if needed
-    document.getElementById('stage2').style.display = 'block';  // Show Stage 2
-    output.innerHTML = 'Unlocked Stage 2: Spiritual Tea Riddle!';
-    document.getElementById('input').value = '';
-    return;
-}
-    <div id="stage2" style="display: none;">
-        <h2>Stage 2: Spiritual Tea Riddle</h2>
-        <p>Solve the tower puzzle to stack virtues.</p>
-        <input type="text" id="stage2-input" placeholder="Enter number of disks (3-5)">
-        <button onclick="hanoiPuzzle()">Solve Tower</button>
-        <div id="stage2-output"></div>
-    </div>
 </body>
-
-<script>
-    function hanoiPuzzle() {
-    let disks = parseInt(document.getElementById('stage2-input').value);
-    if (isNaN(disks) || disks < 3 || disks > 5) {
-        document.getElementById('stage2-output').innerHTML = 'Enter 3-5 disks!';
-        return;
-    }
-    let moves = hanoi(disks, 'A', 'C', 'B');
-    document.getElementById('stage2-output').innerHTML = 'Moves: ' + moves.join('<br>');
-    gameState.currentStage = 3;  // Advance to Stage 3
-    saveGameState();
-}
-
-function hanoi(n, from, to, aux) {
-    let moves = [];
-    if (n === 1) {
-        moves.push('Move disk 1 from ' + from + ' to ' + to);
-        return moves;
-    }
-    moves = moves.concat(hanoi(n - 1, from, aux, to));
-    moves.push('Move disk ' + n + ' from ' + from + ' to ' + to);
-    moves = moves.concat(hanoi(n - 1, aux, to, from));
-    return moves;
-}
-</script>
+</html>
