--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <p style="font-size: 1.2em; margin-bottom: 40px; opacity: 0.9;">用AI演算法延續Sister Roxanne 25年的社區服務使命<br><small>Continuing Sister Roxanne's 25-year legacy through AI algorithms</small></p>
                     
                     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; max-width: 1000px; margin: 0 auto; padding: 0 20px;">
-                        <div class="stage-card" onclick="loadStage('astar')" style="background: white; color: #333; padding: 25px; border-radius: 15px; cursor: pointer; box-shadow: 0 10px 30px rgba(0,0,0,0.3);">
+                       <div class="stage-card" onclick="window.location.href='astar_game.html'" style="background: white; color: #333; padding: 25px; border-radius: 15px; cursor: pointer; box-shadow: 0 10px 30px rgba(0,0,0,0.3);">
                             <div style="font-size: 3em;">🗺️</div>
                             <h3 style="margin: 10px 0; color: #667eea;">A* Search</h3>
                             <p style="margin: 10px 0;">食物配送路徑優化</p>
