Complete research paper with all 5 algorithms

--- a/astar_game.html
+++ b/astar_game.html
@@ -451,17 +451,18 @@
 </head>
 <body>
   <!-- Audio Elements -->
-  <audio id="bgMusic" loop>
-    <source src="https://cdn.pixabay.com/audio/2022/03/10/audio_4a1f6447e8.mp3" type="audio/mpeg">
-  </audio>
-  
-  <audio id="clickSound" preload="auto">
-    <source src="https://cdn.pixabay.com/audio/2021/08/04/audio_12b0c7443c.mp3" type="audio/mpeg">
-  </audio>
-  
-  <audio id="successSound" preload="auto">
-    <source src="https://cdn.pixabay.com/audio/2021/08/04/audio_0625c1539c.mp3" type="audio/mpeg">
-  </audio>
+<audio id="bgMusic" loop>
+  <source src="music/stage1.mp3" type="audio/mpeg">
+</audio>
+
+<audio id="clickSound" preload="auto">
+  <source src="music/rice_incident.mp3" type="audio/mpeg">
+</audio>
+
+<audio id="successSound" preload="auto">
+  <source src="music/finale.mp3" type="audio/mpeg">
+</audio>
+```
 
   <div id="app">
     <div class="header">
